--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,10 +2,28 @@
 <nav class="main-header navbar navbar-expand navbar-white navbar-light">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-      </li>
-    </ul>
+        <li class="nav-item">
+          <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+          <a routerLinkActive="active" routerLink="/dashboard/home" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+          <a routerLinkActive="active" routerLink="/dashboard/reports" class="nav-link">Reports</a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+            <a routerLinkActive="active" routerLink="/dashboard/users" class="nav-link">Users</a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+            <a routerLinkActive="active" routerLink="/dashboard/ssps" class="nav-link">SSPs</a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+          <a routerLinkActive="active" routerLink="/dashboard/about" class="nav-link">About</a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+          <a routerLinkActive="active" routerLink="/dashboard/contacts" class="nav-link">Contacts</a>
+        </li>
+      </ul>
 
     <!-- SEARCH FORM -->
     <form class="form-inline ml-3">
