--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,1 +1,23 @@
 <p>users works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <button class="btn btn-success">New User</button>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <a href="#" class="list-group-item clearfix" *ngFor="let user of users">
+            <div class="pull-left">
+                <h4 class="list-group-item-heading">{{user.username}}</h4>
+                <h4 class="list-group-item-text">{{user.email}}</h4>
+            </div>
+            <span class="pull-right">
+                <div class="pull-left">
+                    <p class="list-group-item-heading">{{user.firstname}}</p>
+                    <p class="list-group-item-text">{{user.lastname}}</p>
+                </div>
+            </span>
+        </a> 
+        <app-user></app-user>
+    </div>
+</div>
